# pika-aio

./: .eslintignore  .gitignore  .prettierignore  .prettierrc.yaml  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  exports.tsx  main.tsx  styles.css
src-tauri/: .gitignore  .taurignore  Cargo.toml  LICENSE.md  express.js  package.json  tauri.conf.json
src-tauri/src/: accounts.rs  config.rs  load.rs  main.rs
src/Assets/: index.ts
src/Components/: Accounts.tsx  Home.tsx  Info.tsx  Load.tsx  Settings.tsx  Sidebar.tsx  index.ts
