[package]
name = "pika-aio"
version = "1.0.1"
description = "Pika AIO"
authors = ["@unhazy"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-read-file", "fs-write-file", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde_json = "1.0"
toml = "0.8.2"

[features]
custom-protocol = ["tauri/custom-protocol"]
